Add barchart showing most active brigades

--- a/code/src/style.css
+++ b/code/src/style.css
@@ -86,6 +86,6 @@ rect:hover {
     fill-opacity: 1;
 }
 
-#alarmTypeHistogram {
+#alarmTypeBarChart, #mostActiveBrigadesBarChart {
     margin-left: -152px;
 }
