Add linechart showing alarms per day

--- a/code/src/style.css
+++ b/code/src/style.css
@@ -86,7 +86,13 @@ rect:hover {
     fill-opacity: 1;
 }
 
-#alarmTypeBarChart, #mostActiveBrigadesBarChart, #averageCallDurationBarChart {
+.line {
+    fill: none;
+    stroke: chocolate;
+    stroke-width: 3;
+}
+
+#alarmTypeBarChart, #mostActiveBrigadesBarChart, #averageCallDurationBarChart, #alarmsPerDayLineChart {
     position: relative;
     margin-left: -152px;
 }
