--- a/code/src/style.css
+++ b/code/src/style.css
@@ -129,10 +129,26 @@ rect:hover {
 }
 
 #tooltip {
+    display: none;
     position: absolute;
     padding: 5px;
     fill: black;
     background-color: white;
     border: 1px solid black;
     font-size: 12px;
+}
+
+.loader {
+    margin: 0 auto;
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid chocolate; /* Blue */
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
